--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <h1>MyName's Student Home Page</h1>
+    <img src="images\cover_photo.jpg" alt="Cover photo " id="coverpic" > 
+    <h1>Pranjal's Student Home Page</h1>
     <a href="#">GitHub Pages</a> | 
     <a href="#">mDrive</a> | 
     <a href="#">CSIS server</a> 
     <br />
     <br />
     <h2>Assignments</h2>
-    <a href="#">Assignment 01</a><br />
+    <a href="assignments\assignment01.html">Assignment 01</a><br />
     <a href="#">Assignment 02</a><br />
     <a href="#">Assignment 03</a><br />
     <a href="#">Assignment 04</a><br />
