--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,3 +1,3 @@
 <html>
-    <img src="assignments\images\Luffys-Gear-5-Gomu-Gomu-no-Gigant.jpg.webp" alt="Cover photo " id="coverpic" > 
+    <img src="assignments\images\gear5luffy.jpg" alt="Cover photo " id="coverpic" > 
 </html>
