new image added

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,3 +1,5 @@
 <html>
     <img src="assignments\images\gear5luffy.jpg" alt="Cover photo " id="coverpic" > 
+    <img src="https://via.placeholder.com/200" />
+    
 </html>
