--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,5 +1,6 @@
 <html>
-    <img src="assignments\images\gear5luffy.jpg" alt="Cover photo " id="coverpic" > 
+    <img src="assignments\images\MountainCordLandscape.jpg" alt="Cover photo " id="coverpic" > 
+  <br>
     <img src="https://via.placeholder.com/200" />
-    
+
 </html>
