--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,6 +1,11 @@
 <html>
-    <img src="assignments\images\MountainCordLandscape.jpg" alt="Cover photo " id="coverpic" > 
-  <br>
+    <head> 
+        <img src="assignments\images\MountainCordLandscape.jpg" alt="Cover photo " id="coverpic" > 
+        
+    </head>
+ <body>
+    
     <img src="https://via.placeholder.com/200" />
 
+    </body>
 </html>
