--- a/assignment01.html
+++ b/assignment01.html
@@ -1,6 +1,6 @@
 <html>
     <head> 
-        <img src="assignments\images\MountainCordLandscape.jpg" alt="Cover photo " id="coverpic" > 
+        <img src="assignments\images\MountainCordLandscape.jpg" alt="Cover photo " id="coverpic" /> 
         
     </head>
  <body>
