m drive link added

--- a/assignment01.html
+++ b/assignment01.html
@@ -1,11 +1,11 @@
 <html>
     <head> 
-        <img src="assignments\images\MountainCordLandscape.jpg" /> 
+        <img src="assignments\images\MountainCordLandscape.jpg" > 
         
     </head>
  <body>
     
-    <img src="https://via.placeholder.com/200" />
+    <img src="https://via.placeholder.com/200" >
 
     </body>
 </html>
