--- a/assignments/images/assignment01.html
+++ b/assignments/images/assignment01.html
@@ -5,7 +5,7 @@
     </head>
  <body>
     
-    <img src="https://via.placeholder.com/200" >
+    <img src="https://via.placeholder.com/200" />
 
     </body>
 </html>
