--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,11 +1,13 @@
-<html>
-    <head> 
-        <img src="assignments\images\MountainCordLandscape.jpg" > 
-        
-    </head>
- <body>
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img src="assignments\images\index01.jpg" alt="alternatetext"> 
     <img src="https://via.placeholder.com/200" />
-
-    </body>
+</body>
 </html>
