--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <h1>Pranjal's Student Home Page</h1>
-    <a href="#">GitHub Pages</a> | 
+    <a href="https://nectricblade.github.io/#">GitHub Pages</a> | 
     <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
     <a href="#">CSIS server</a> 
     <br />
