--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 1 </title>
+    <img src="assignments\images\index01.jpg" alt="alternatetext"> 
 </head>
 <body>
-    <img src="assignments\images\index01.jpg" alt="alternatetext"> 
+ 
     <img src="https://via.placeholder.com/200" />
 </body>
 </html>
