--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1 </title>
-    <img src="assignments\images\index01.jpg" alt="alternatetext"> 
+    <img src="images\index01.jpg" alt="alternatetext"> 
 </head>
 <body>
  
