--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1 </title>
-    <img src="images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="alternatetext"> 
+ 
 </head>
 <body>
- 
+    <h1>Pictures</h1>
+    <img src="images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="alternatetext"> 
+   <br>
     <img src="https://via.placeholder.com/200" />
+    <br>
+    <h2>HTML Forms</h2>
+
+    <form action="/action_page.php">
+      <label for="fname">First name:</label><br>
+      <input type="text" id="fname" name="fname" value="John"><br>
+      <label for="lname">Last name:</label><br>
+      <input type="text" id="lname" name="lname" value="Doe"><br><br>
+      <input type="submit" value="Submit">
+    </form>
     <br>
     <a href="https://nectricblade.github.io/#">Go BACK</a> |
 
