--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -11,13 +11,12 @@
     <br>
     <h2>HTML Forms</h2>
 
-    <form action="/action_page.php">
-      <label for="fname">First name:</label><br>
-      <input type="text" id="fname" name="fname" value="John"><br>
-      <label for="lname">Last name:</label><br>
-      <input type="text" id="lname" name="lname" value="Doe"><br><br>
-      <input type="submit" value="Submit">
-    </form>
+    <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname">
+      </form> 
     <br>
     <a href="https://nectricblade.github.io/#">Go BACK</a> |
 
