--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -18,6 +18,15 @@
         <input type="text" id="lname" name="lname">
       </form> 
     <br>
+    <table border="1">
+        <tr><td colspan="3">The Daily News</td></tr>
+        <tr>
+          <td>ssdf gsdf gsdfg sdf gsdf gsdfg sdfg sdfg sdf gsdf gsdfgsdf gsdfg sdfg sdf gsdfg sdfg sdfg sdfg sdfgsdfgsdfg sdf gsdfg sdfg sdfg sdfgsdfgsdfg sdfg sdfgsdgf </td>
+          <td>ssdf gsdf gsdfg sdf gsdf gsdfg sdfg sdfg sdf gsdf gsdfgsdf gsdfg sdfg sdf gsdfg sdfg sdfg sdfg sdfgsdfgsdfg sdf gsdfg sdfg sdfg sdfgsdfgsdfg sdfg sdfgsdgf </td>
+          <td>ssdf gsdf gsdfg sdf gsdf gsdfg sdfg sdfg sdf gsdf gsdfgsdf gsdfg sdfg sdf gsdfg sdfg sdfg sdfg sdfgsdfgsdfg sdf gsdfg sdfg sdfg sdfgsdfgsdfg sdfg sdfgsdgf </td>
+        </tr>
+      </table>
+      
     <a href="https://nectricblade.github.io/#">Go BACK</a> |
 
 </body>
