img link changed

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Pictures</h1>
-    <img src="images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="alternatetext"> 
+    <img src="https://www.wzzm13.com/article/weather/winters-wallop-michigan-snowfall-totals/69-56195623" alt="alternatetext"> 
    <br>
     <img src="https://via.placeholder.com/200" />
     <br>
@@ -26,7 +26,7 @@
           <td>ssdf gsdf gsdfg sdf gsdf gsdfg sdfg sdfg sdf gsdf gsdfgsdf gsdfg sdfg sdf gsdfg sdfg sdfg sdfg sdfgsdfgsdfg sdf gsdfg sdfg sdfg sdfgsdfgsdfg sdfg sdfgsdgf </td>
         </tr>
       </table>
-      
+
     <a href="https://nectricblade.github.io/#">Go BACK</a> |
 
 </body>
