--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Pictures</h1>
-    <img src="C:\Users\pranj\Documents\nectricblade.github.io\images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="alternatetext"> 
+    <img src="assignments\images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic"> 
    <br>
     <img src="https://via.placeholder.com/200" />
     <br>
