--- a/assignment01.html
+++ b/assignment01.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Pictures</h1>
-    <img src="assignments\images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic"> 
+    <img src="assignments\images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic" width="600" height="600" > 
    <br>
     <img src="https://via.placeholder.com/200" />
     <br>
