--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -7,7 +7,7 @@
 <body>
     
    <br>
-    <img src="https://via.placeholder.com/200" />
+    <img src="https://via.placeholder.com/200" >
     <br>
     <h2>HTML Forms</h2>
 
