--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <h1>Pictures</h1>
-  <img src="assignments\images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic" width="600" height="600" > 
-</head>
-<body>
-    
-   <br>
-    <img src="https://via.placeholder.com/200" >
-    <br>
-    <h2>HTML Forms</h2>
+    <head>
+      <h1>Pictures</h1>
+      <img src="assignments\images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic" width="600" height="600" > 
+    </head>
+    <body>
+  
+  
+      <p>Hello, world</p>
+  
+  <br>
+  <img src="https://via.placeholder.com/200" >
+  <br>
+  <h2>HTML Forms</h2>
 
-    <form>
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname">
-      </form> 
-    <br>
-    <table border="1">
-        <tr><td colspan="3">The Daily News</td></tr>
-        <tr>
-          <td>ssdf gsdf gsdfg sdf gsdf gsdfg sdfg sdfg sdf gsdf gsdfgsdf gsdfg sdfg sdf gsdfg sdfg sdfg sdfg sdfgsdfgsdfg sdf gsdfg sdfg sdfg sdfgsdfgsdfg sdfg sdfgsdgf </td>
-          <td>ssdf gsdf gsdfg sdf gsdf gsdfg sdfg sdfg sdf gsdf gsdfgsdf gsdfg sdfg sdf gsdfg sdfg sdfg sdfg sdfgsdfgsdfg sdf gsdfg sdfg sdfg sdfgsdfgsdfg sdfg sdfgsdgf </td>
-          <td>ssdf gsdf gsdfg sdf gsdf gsdfg sdfg sdfg sdf gsdf gsdfgsdf gsdfg sdfg sdf gsdfg sdfg sdfg sdfg sdfgsdfgsdfg sdf gsdfg sdfg sdfg sdfgsdfgsdfg sdfg sdfgsdgf </td>
-        </tr>
-      </table>
+  <form>
+      <label for="fname">First name:</label><br>
+      <input type="text" id="fname" name="fname"><br>
+      <label for="lname">Last name:</label><br>
+      <input type="text" id="lname" name="lname">
+    </form> 
+  <br>
+  <table border="1">
+      <tr><td colspan="3">The Daily News</td></tr>
+      <tr>
+        <td>ssdf gsdf gsdfg sdf gsdf gsdfg sdfg sdfg sdf gsdf gsdfgsdf gsdfg sdfg sdf gsdfg sdfg sdfg sdfg sdfgsdfgsdfg sdf gsdfg sdfg sdfg sdfgsdfgsdfg sdfg sdfgsdgf </td>
+        <td>ssdf gsdf gsdfg sdf gsdf gsdfg sdfg sdfg sdf gsdf gsdfgsdf gsdfg sdfg sdf gsdfg sdfg sdfg sdfg sdfgsdfgsdfg sdf gsdfg sdfg sdfg sdfgsdfgsdfg sdfg sdfgsdgf </td>
+        <td>ssdf gsdf gsdfg sdf gsdf gsdfg sdfg sdfg sdf gsdf gsdfgsdf gsdfg sdfg sdf gsdfg sdfg sdfg sdfg sdfgsdfgsdfg sdf gsdfg sdfg sdfg sdfgsdfgsdfg sdfg sdfgsdgf </td>
+      </tr>
+    </table>
 
-    <a href="https://nectricblade.github.io/#">Go BACK</a> |
-
-</body>
+  <a href="https://nectricblade.github.io/#">Go BACK</a> |
+</body> 
 </html>
