--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
     <h1>Pranjal's Student Home Page</h1>
-    <a href="https://nectricblade.github.io/#">GitHub Pages</a> | 
-    <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
-     
-    <br />
+    <nav>
+        <ul>
+            <a href="https://nectricblade.github.io/#">GitHub Pages</a> | 
+            <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
+        </ul>   
+      </nav>
+
     <br />
     <h2>Assignments</h2>
     <a href="assignments\assignment01.html">Assignment 01</a><br />
