--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="./layout.css">
     <h1>Pranjal's Student Home Page</h1>
     <nav>
         <ul>
