--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <ul>
             <a href="https://nectricblade.github.io/#">GitHub Pages</a> | 
             <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
-            <a href="https://codepen.io/nectricblade/pen/rNvzpJE">Codepen</a>
+            <a href="https://codepen.io/nectricblade/pen/rNvzpJE">Codepen</a> |
         </ul>   
       </nav>
 
