--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1>Pranjal's Student Home Page</h1>
     <nav>
         <ul>
-            <a href="https://nectricblade.github.io/#">GitHub Pages</a> | 
+            <a href="https://nectricblade.github.io">GitHub Pages</a> | 
             <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
             <a href="https://codepen.io/nectricblade/pen/rNvzpJE">Codepen</a> |
         </ul>   
