--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <a href="https://nectricblade.github.io/#">Go BACK</a> 
+  <a href="https://nectricblade.github.io">Go BACK</a> 
     <head>
       <h1>Pictures</h1>
-      <img src="assignments\images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic" width="600" height="600" > 
+      <img src="assignments\images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic" width="600" height="600"> 
     </head>
     <body>
   
