--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="#">Assignment 07</a><br />
 </head>
 <body>
-    <img src="assignments\images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic" width="600" height="600"> 
+    <img src="images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic" width="600" height="600"> 
 </body>
 </html>>
 
