--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -6,7 +6,7 @@
     </head>
    <body>
       <h1>Pictures</h1>
-      <img src="images/benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic" width="600" height="600">   
+      <img src="images\benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="Space pic" width="600" height="600">   
   <img src="https://via.placeholder.com/200" >
   <br>
    <h2>HTML Forms</h2>
