--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="./layout.css">
-    <h1>Pranjal's Student Home Page</h1>
+    <h1>Pranjal's Home Page</h1>
     <nav>
         <ul>
             <a href="https://nectricblade.github.io">GitHub Pages</a> | 
