--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -8,7 +8,7 @@
    
     <body>
       <h1>Pictures</h1>
-      <img src="images\space.jpg" alt="Space pic" width="600" height="600">   
+      <img src="images/space.jpg" alt="Space pic" width="600" height="600">   
   
       <img src="https://via.placeholder.com/200" >
   
