--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -7,6 +7,14 @@
    
    
     <body>
+      <nav>
+        
+        <a href="https://nectricblade.github.io">GitHub Pages</a> | 
+        <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
+        <a href="https://codepen.io/nectricblade/pen/rNvzpJE">Codepen</a> |
+      
+  </nav>
+
       <h1>Pictures</h1>
       <img src="images\space.jpg" alt="Space pic" width="600" height="600">   
   
