--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -7,6 +7,8 @@
         <title>Document</title>
     </head>
     <body>
+        <link rel="stylesheet" href="./layout.css">
+    
         <nav>
         
             <a href="https://nectricblade.github.io">GitHub Pages</a> | 
