--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -7,11 +7,13 @@
    
    
     <body>
+      <link rel="stylesheet" href="./layout.css">
+      <h1>Pranjal's Home Page</h1>
       <nav>
         
         <a href="https://nectricblade.github.io">GitHub Pages</a> | 
         <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
-        <a href="https://codepen.io/nectricblade/pen/rNvzpJE">Codepen</a> |
+        <a href="https://codepen.io/nectricblade/pen/rNvzpJE" target="_blank" >Codepen</a> |
       
   </nav>
 
