--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -13,7 +13,7 @@
         
             <a href="https://nectricblade.github.io">GitHub Pages</a> | 
             <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
-            <a href="https://codepen.io/nectricblade/pen/rNvzpJE">Codepen</a> |
+            <a href="https://codepen.io/nectricblade/pen/rNvzpJE" target="_blank" >Codepen</a> |
           
       </nav>
 
