--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-  
+<html>
+    <html lang="en">
     <head>
-      <a href="https://nectricblade.github.io">Go BACK</a> 
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
     </head>
    
    
