--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <link rel="stylesheet" href="./layout.css">
+        <h1>Pranjal's Home Page</h1>
     
         <nav>
         
