--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -10,7 +10,7 @@
    
    
     <body>
-      <link rel="stylesheet" href="./layout.css">
+      <link rel="stylesheet" href="layout.css">
       
       <nav>
         
