--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Document</title>
     </head>
     <body>
-        <link rel="stylesheet" href="./layout.css">
+        <link rel="stylesheet" href="layout.css">
         <h1>Pranjal's Home Page</h1> 
     
         <nav>
