--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <link rel="stylesheet" href="layout.css">
-        <h1></h1> 
+        <h1>Assignment 2</h1>  
         <nav>
         
             <a href="https://nectricblade.github.io">GitHub Pages</a> | 
