--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -18,7 +18,7 @@
           <a href="https://codepen.io/nectricblade/pen/rNvzpJE" target="_blank" >Codepen</a> |
         
     </nav>
-      <img src="images\space.jpg" alt="Space pic" width="600" height="600">   
+      <img src="/images/space.jpg" alt="Space pic" width="600" height="600" >   
   
       <img src="https://via.placeholder.com/200" >
    
@@ -41,7 +41,7 @@
        </div>
        
    </div>
-   <br>
+   <br> 
    <h3>HTML Table</h3>
 
     <table>
