--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -11,13 +11,13 @@
    
     <h1>Assignment 01</h1> 
   
-      <nav>
-      
-          <a href="https://nectricblade.github.io">GitHub Pages</a> | 
-          <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
-          <a href="https://codepen.io/nectricblade/pen/rNvzpJE" target="_blank" >Codepen</a> |
+    <nav>
         
-    </nav>
+      <a href="https://nectricblade.github.io">GitHub Pages</a> | 
+      <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
+      <a href="https://codepen.io/nectricblade/pen/rNvzpJE" target="_blank" >Codepen</a> |
+    <a href="creative-cv_free_1-1-0\index.html" target="_blank" >CV</a> |
+</nav>
       <img src="/images/space.jpg" alt="Space pic" width="600" height="600" >   
   
       <img src="https://via.placeholder.com/200" >
