--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -16,7 +16,7 @@
             <a href="https://nectricblade.github.io">GitHub Pages</a> | 
             <a href="http://webp.svsu.edu/~poli/">mDrive</a> | 
             <a href="https://codepen.io/nectricblade/pen/rNvzpJE" target="_blank" >Codepen</a> |
-          
+          <a href="creative-cv_free_1-1-0\index.html" target="_blank" >CV</a> |
       </nav>
 
       <br />
