--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -23,7 +23,7 @@
 
       <header>
         <h1>Assignment 02</h1>
-        <p>by Imagona Codalittle</p>
+        <p>by Pranjal Oli</p>
       </header>
       
       <nav>
