--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -26,12 +26,12 @@
         <p>by Pranjal Oli</p>
       </header>
       
-      <nav>
+      <div nav>
         <a href="#parta">Part A</a> | 
         <a href="#partb">Part B</a> | 
         <a href="#partc">Part C</a> |
         <a href="#partd">Part D</a>
-      </nav>
+      </div>
       
       <section>
       <hr id="parta" />
