--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -26,7 +26,7 @@
         <p>by Pranjal Oli</p>
       </header>
       
-      <div nav>
+      <div class="mini-navi-bar">
         <a href="#parta">Part A</a> | 
         <a href="#partb">Part B</a> | 
         <a href="#partc">Part C</a> |
